[package]
name = "bluebird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
chrono = "0.4.22"
diesel = "2.0.0"
env_logger = "0.9.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.144"
serde_json = "1.0.85"
uuid = "1.1.2"
